src/components/Button/Button.scss
@use "../../../src/styles/variables" as *;
@use "../../styles/mixins" as *;

.button {
  background-color: $background-color;
  width: 9rem;
  height: 3rem;

  font-size: $default-text-size;
  color: $white;

  border: 0.1rem solid $button-border;
  border-radius: $button-border-radius;

  &:active {
    border: 0.2rem solid $white;
  }
}

.button--map-navigation{
  background-color: $white;
  color: $black;
  width: 3rem;
  height: 3rem;
  font-size: 1rem;
}
.button--map-navigation-zoom{
  font-size: 2rem;
  background-color: $white;
  color: $black;
  width: 3rem;
  height: 3rem;
}

.button--details {
  background-color: $green;
}

.button--close {
  border: solid 0px;
  background-color: rgba(255, 0, 0, 0);
  width: 3rem;
  color: $black;
}
.button--remove {
  background-color: $orange;
}

.button--save {
  background-color: $orange;
}

.button--contact {
  height: 4rem;
  margin: auto;
  width: 12rem;
  border-color: $green;
  background-color: $green;
  font-size: 3rem;
}

.button--enter {
  margin: 0.8rem;
  color: $alternate-text-color;
  width: 16rem;
  height: 3rem;
  font-size: 1.2rem;
  font-weight: 300;
  padding: 0.8rem 2rem;
  border-radius: 1rem;
  border: none;
  background-color: $grey;
}

.button--filter {
  background-color: $white;
  color: $black;
  border: 0.125rem solid $black;
  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
  min-width: 9rem;
  margin-right: 1rem;
  margin-left: 1rem;

  &-active {
    background-color: $black;
    color: $white;
    border: 0.125rem solid $black;
    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
    min-width: 9rem;
    margin-right: 1rem;
    margin-left: 1rem;
  }
}
.button--signin,
.button--signup {
  color: $alternate-text-color;
  width: auto;
  margin-top: 2rem;
  margin-left: 0.6rem;
  margin-right: 0.6rem;
  height: 3.5rem;
  font-size: 1.2rem;
  font-weight: 300;
  padding: 0.8rem 2rem;
  border-radius: 1rem;
  border: none;
  background-color: $grey;
  align-items: center;
}
.button--menu {
  width: 2.5rem;
}

